features/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deluge
  name: deluge
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - image: lscr.io/linuxserver/deluge:2.2.0@sha256:8e0d495f10f2ee29919f229ae0b32d92f2b7a5d5339fc6f171f19f3f94b9ed56
        name: deluge
        ports:
        - name: http
          containerPort: 8112
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: configdir
          mountPath: /config
        - name: datadir
          subPath: deluge
          mountPath: /data
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: deluge-config-pvc
      - name: datadir
        persistentVolumeClaim:
          claimName: media-stack-pvc
